# clawhive

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  README_CN.md  SECURITY.md  install.sh  justfile  package-lock.json
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: main.yaml  routing.yaml
config/agents.d/: clawhive-builder.yaml  clawhive-main.yaml  nanocrab-builder.yaml  nanocrab-main.yaml
config/providers.d/: anthropic.yaml  azure-openai.yaml.example  bedrock.yaml.example  openai.yaml
crates/clawhive-auth/: Cargo.toml
crates/clawhive-auth/src/: error.rs  lib.rs  manager.rs  profile.rs
crates/clawhive-auth/src/oauth/: anthropic.rs  openai.rs  server.rs
crates/clawhive-bus/: Cargo.toml
crates/clawhive-bus/src/: lib.rs
crates/clawhive-channels/: Cargo.toml
crates/clawhive-channels/src/: common.rs  dingtalk.rs  discord.rs  feishu.rs  imessage.rs  lib.rs  slack.rs  telegram.rs  web_console.rs  webhook.rs  wecom.rs  whatsapp.rs
crates/clawhive-channels/src/feishu/: bot.rs  client.rs  codec.rs  listeners.rs  message.rs  mod.rs  types.rs
crates/clawhive-channels/src/weixin/: api.rs  bot.rs  crypto.rs  mod.rs  types.rs
crates/clawhive-channels/tests/: weixin_ilink_test.rs
crates/clawhive-cli/: Cargo.toml
crates/clawhive-core/: Cargo.toml
crates/clawhive-gateway/: Cargo.toml
crates/clawhive-memory/: Cargo.toml
crates/clawhive-provider/: Cargo.toml
crates/clawhive-provider/src/: anthropic.rs  azure_openai.rs  error.rs  gemini.rs  lib.rs  openai.rs  openai_chatgpt.rs  openai_compat.rs  types.rs
crates/clawhive-provider/src/bedrock/: converse.rs  eventstream.rs  mod.rs  sigv4.rs
crates/clawhive-provider/tests/: bedrock_integration.rs
crates/clawhive-runtime/: Cargo.toml
crates/clawhive-scheduler/: Cargo.toml
crates/clawhive-scheduler/src/: config.rs  lib.rs  manager.rs  sqlite_store.rs  wait_task.rs
crates/clawhive-scheduler/tests/: integration.rs
crates/clawhive-schema/: Cargo.toml
crates/clawhive-server/: Cargo.toml  build.rs
crates/clawhive-tui/: Cargo.toml
crates/clawhive-tui/src/: lib.rs  main.rs
crates/clawhive-tui/src/code/: history.rs  markdown.rs  mod.rs
crates/clawhive-tui/src/code/bottom_pane/: file_search.rs  input.rs  shortcuts.rs  slash_command.rs
crates/clawhive-tui/src/dashboard/: mod.rs
crates/nanocrab-auth/: Cargo.toml
crates/nanocrab-bus/: Cargo.toml
crates/nanocrab-bus/src/: lib.rs
crates/nanocrab-channels/: Cargo.toml
crates/nanocrab-channels-telegram/: Cargo.toml
crates/nanocrab-channels-telegram/src/: lib.rs
crates/nanocrab-channels-telegram/tests/: telegram_bot_integration.rs
crates/nanocrab-channels/src/: discord.rs  lib.rs  telegram.rs
crates/nanocrab-cli/: Cargo.toml
crates/nanocrab-cli/src/: init.rs  init_ui.rs  main.rs  setup.rs  setup_scan.rs  setup_ui.rs
crates/nanocrab-cli/src/commands/: auth.rs
crates/nanocrab-cli/tests/: init_test.rs  setup_test.rs
crates/nanocrab-core/: Cargo.toml
crates/nanocrab-core/src/: audit.rs  config.rs  consolidation.rs  context.rs  file_tools.rs  heartbeat.rs  hooks.rs  lib.rs  memory_tools.rs  orchestrator.rs  persona.rs  policy.rs  router.rs  schedule_tool.rs  session.rs  session_lock.rs  shell_tool.rs  skill.rs  slash_commands.rs  streaming.rs  subagent.rs  subagent_tool.rs  templates.rs  tool.rs  web_fetch_tool.rs  web_search_tool.rs  workspace.rs
crates/nanocrab-core/tests/: integration.rs  mock_server_integration.rs  openai_mock_server_integration.rs  sandbox_integration.rs
crates/nanocrab-gateway/: Cargo.toml
crates/nanocrab-gateway/src/: lib.rs
crates/nanocrab-memory/: Cargo.toml
crates/nanocrab-memory/src/: chunker.rs  embedding.rs  file_store.rs  lib.rs  migrations.rs  models.rs  search_index.rs  session.rs  store.rs
crates/nanocrab-provider/: Cargo.toml
crates/nanocrab-provider/src/: anthropic.rs  lib.rs  openai.rs  openai_chatgpt.rs  types.rs
crates/nanocrab-runtime/: Cargo.toml
crates/nanocrab-scheduler/: Cargo.toml
crates/nanocrab-scheduler/src/: backoff.rs  compute.rs  config.rs  lib.rs  manager.rs  persistence.rs  state.rs
crates/nanocrab-scheduler/tests/: integration.rs
crates/nanocrab-schema/: Cargo.toml
crates/nanocrab-server/: Cargo.toml
crates/nanocrab-server/src/: lib.rs  main.rs  state.rs
crates/nanocrab-server/src/routes/: agents.rs  auth.rs  channels.rs  events.rs  mod.rs  providers.rs  routing.rs  schedules.rs  sessions.rs
crates/nanocrab-tui/: Cargo.toml
crates/nanocrab-tui/src/: lib.rs  main.rs
docs/: clawhive-MVP-核心技术方案.md  clawhive-memory-design.md  clawhive-mvp-technical-spec.md  clawhive-vnext-feature-planning.md  code-review-issues.md  corral-integration-proposal.md  nanocrab-MVP-核心技术方案.md  nanocrab-memory-design.md  nanocrab-vNext-完整版功能规划.md  nanocrab-vNext-能力权限模型与执行术语.md
docs/design/: web-admin-ui.md
docs/plans/: 2025-02-23-cli-setup-wizard.md  2025-02-23-multi-bot-management-ui.md  2025-02-23-oauth-subscription-mode.md  2025-02-23-scheduled-tasks.md  2025-02-23-skill-sandbox-integration.md  2026-02-12-post-mvp-completion.md  2026-02-13-code-review-issues.md  2026-02-13-memory-system-integration.md  2026-02-13-openai-provider-discord-channel.md  2026-02-13-session-history-and-tool-calling.md  2026-02-23-setup-command-impl.md  2026-02-23-setup-command-redesign.md  2026-02-24-chatgpt-responses-provider.md  2026-02-28-azure-openai-responses-api.md  2026-03-03-network-permission-redesign.md  2026-03-04-scheduler-redesign-phase2.md  2026-03-04-scheduler-redesign.md  2026-03-04-self-update-command.md  2026-03-08-skill-permission-scope-fix.md  2026-03-09-model-metadata-and-discovery.md  mvp-implementation-plan.md
logs/: nanocrab-server.log.2026-02-20  nanocrab-server.out  nanocrab.log.2026-02-20  nanocrab.log.2026-02-25  nanocrab.out
scripts/: check.sh  install-git-hooks.sh  release.sh
web/: eslint.config.mjs  index.html  package-lock.json  package.json
(+238 files in other folders)
