[workspace]
resolver = "2"
members = [
  "crates/nanocrab-schema",
  "crates/nanocrab-bus",
  "crates/nanocrab-core",
  "crates/nanocrab-gateway",
  "crates/nanocrab-memory",
  "crates/nanocrab-runtime",
  "crates/nanocrab-channels-telegram",
  "crates/nanocrab-cli",
  "crates/nanocrab-tui",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["dragon"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
