[workspace]
resolver = "2"
default-members = ["crates/nanocrab-cli"]
members = [
  "crates/nanocrab-schema",
  "crates/nanocrab-bus",
  "crates/nanocrab-core",
  "crates/nanocrab-gateway",
  "crates/nanocrab-memory",
  "crates/nanocrab-runtime",
  "crates/nanocrab-provider",
  "crates/nanocrab-channels-telegram",
  "crates/nanocrab-cli",
  "crates/nanocrab-tui",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["dragon"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
futures-core = "0.3"
async-stream = "0.3"
bytes = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing-subscriber = "0.3"
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
ratatui = "0.29"
crossterm = "0.28"
tempfile = "3"
wiremock = "0.6"
