[package]
name = "clawhive-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
uuid.workspace = true
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"
webbrowser = "1"
rand = "0.8"
fd-lock = "4"

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
