[package]
name = "nanocrab-channels-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
nanocrab-schema = { path = "../nanocrab-schema" }
