[package]
name = "nanocrab-channels"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["telegram", "discord"]
telegram = ["dep:teloxide", "dep:log"]
discord = ["dep:serenity"]

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
async-trait.workspace = true
nanocrab-schema = { path = "../nanocrab-schema" }
nanocrab-gateway = { path = "../nanocrab-gateway" }

teloxide = { workspace = true, optional = true }
log = { workspace = true, optional = true }
serenity = { workspace = true, optional = true }
