[package]
name = "nanocrab-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_yaml.workspace = true
nanocrab-core = { path = "../nanocrab-core" }
nanocrab-bus = { path = "../nanocrab-bus" }
nanocrab-memory = { path = "../nanocrab-memory" }
nanocrab-provider = { path = "../nanocrab-provider" }
nanocrab-gateway = { path = "../nanocrab-gateway" }
nanocrab-schema = { path = "../nanocrab-schema" }
nanocrab-channels-telegram = { path = "../nanocrab-channels-telegram" }

[[bin]]
name = "nanocrab"
path = "src/main.rs"
