[package]
name = "nanocrab-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
uuid.workspace = true
chrono.workspace = true
serde_yaml.workspace = true
serde.workspace = true
reqwest.workspace = true
dialoguer = "0.11"
console = "0.15"
serde_json.workspace = true
libc = "0.2"
tempfile.workspace = true
nanocrab-core = { path = "../nanocrab-core" }
nanocrab-bus = { path = "../nanocrab-bus" }
nanocrab-memory = { path = "../nanocrab-memory" }
nanocrab-provider = { path = "../nanocrab-provider" }
nanocrab-gateway = { path = "../nanocrab-gateway" }
nanocrab-schema = { path = "../nanocrab-schema" }
nanocrab-channels = { path = "../nanocrab-channels" }
nanocrab-runtime = { path = "../nanocrab-runtime" }
nanocrab-tui = { path = "../nanocrab-tui" }
nanocrab-auth = { path = "../nanocrab-auth" }
nanocrab-scheduler = { path = "../nanocrab-scheduler" }
nanocrab-server = { path = "../nanocrab-server" }

[[bin]]
name = "nanocrab"
path = "src/main.rs"

[dev-dependencies]
tempfile.workspace = true
