[package]
name = "nanocrab-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
nanocrab-provider = { path = "../nanocrab-provider" }
