[package]
name = "nanocrab-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
futures-core = "0.3"
tokio-stream = "0.1"
nanocrab-provider = { path = "../nanocrab-provider" }
nanocrab-schema = { path = "../nanocrab-schema" }
nanocrab-memory = { path = "../nanocrab-memory" }
nanocrab-bus = { path = "../nanocrab-bus" }
nanocrab-runtime = { path = "../nanocrab-runtime" }
reqwest.workspace = true
htmd = "0.5"

[dev-dependencies]
tempfile.workspace = true
nanocrab-provider = { path = "../nanocrab-provider" }
nanocrab-bus = { path = "../nanocrab-bus" }
nanocrab-schema = { path = "../nanocrab-schema" }
nanocrab-memory = { path = "../nanocrab-memory" }
tokio = { workspace = true, features = ["full", "test-util"] }
async-trait.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
wiremock.workspace = true
