[package]
name = "nanocrab-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
nanocrab-core = { path = "../nanocrab-core" }
nanocrab-schema = { path = "../nanocrab-schema" }
nanocrab-provider = { path = "../nanocrab-provider" }
nanocrab-memory = { path = "../nanocrab-memory" }
nanocrab-bus = { path = "../nanocrab-bus" }
tokio.workspace = true
