[package]
name = "nanocrab-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
rusqlite.workspace = true
sqlite-vec.workspace = true
tokio.workspace = true
serde_json.workspace = true
reqwest.workspace = true
sha2 = "0.10"

[dev-dependencies]
tempfile.workspace = true
