[package]
name = "nanocrab-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde_json.workspace = true
