[package]
name = "nanocrab-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures-core.workspace = true
async-stream.workspace = true
bytes.workspace = true
async-trait.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde_json.workspace = true
nanocrab-auth = { path = "../nanocrab-auth" }
