[package]
name = "nanocrab-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nanocrab-schema = { path = "../nanocrab-schema" }
nanocrab-bus = { path = "../nanocrab-bus" }
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
chrono.workspace = true
chrono-tz = "0.9"
cron = "0.12"
uuid.workspace = true
tokio.workspace = true
