[package]
name = "nanocrab-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio-stream.workspace = true
futures-core.workspace = true
async-stream.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
nanocrab-schema = { path = "../nanocrab-schema" }
nanocrab-bus = { path = "../nanocrab-bus" }
nanocrab-core = { path = "../nanocrab-core" }
nanocrab-gateway = { path = "../nanocrab-gateway" }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
nanocrab-auth = { path = "../nanocrab-auth" }
