[package]
name = "nanocrab-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
ratatui.workspace = true
crossterm.workspace = true
nanocrab-bus = { path = "../nanocrab-bus" }
nanocrab-schema = { path = "../nanocrab-schema" }

[[bin]]
name = "nanocrab-tui"
path = "src/main.rs"
