[package]
name = "nanocrab-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
ratatui.workspace = true
crossterm.workspace = true
chrono.workspace = true
nanocrab-bus = { path = "../nanocrab-bus" }
nanocrab-schema = { path = "../nanocrab-schema" }
nanocrab-core = { path = "../nanocrab-core" }
nanocrab-memory = { path = "../nanocrab-memory" }
nanocrab-provider = { path = "../nanocrab-provider" }
nanocrab-gateway = { path = "../nanocrab-gateway" }

[lib]
name = "nanocrab_tui"
path = "src/lib.rs"

[[bin]]
name = "nanocrab-tui"
path = "src/main.rs"
